--- a/src/Sandbox.Selenium/Sandbox.Selenium.csproj
+++ b/src/Sandbox.Selenium/Sandbox.Selenium.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="WebDriverManager" Version="2.15.0" />
     <PackageReference Include="xRetry" Version="1.8.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xunit.abstractions" Version="2.0.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
