--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -54,6 +54,7 @@ csharp_style_prefer_extended_property_pattern = true:suggestion
 csharp_style_var_for_built_in_types = true:silent
 csharp_style_var_when_type_is_apparent = true:silent
 csharp_style_var_elsewhere = false:silent
+dotnet_diagnostic.SA1600.severity = silent
 
 [*.{cs,vb}]
 #### Naming styles ####
