feat: Added switch and fs example

--- a/src/Sandbox.ConsoleApp/Sandbox.ConsoleApp.csproj
+++ b/src/Sandbox.ConsoleApp/Sandbox.ConsoleApp.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Sandbox.Core\Sandbox.Core.csproj" />
     <ProjectReference Include="..\Sandbox.FSharp.Library\Sandbox.FSharp.Library.fsproj" />
     <ProjectReference Include="..\Sandbox.SQLite\Sandbox.SQLite.csproj" />
     <ProjectReference Include="..\Sandbox.VisualBasic.Library\Sandbox.VisualBasic.Library.vbproj" />
