--- a/src/Sandbox.Events/Sandbox.Events.csproj
+++ b/src/Sandbox.Events/Sandbox.Events.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Sandbox.Core\Sandbox.Core.csproj" />
+  </ItemGroup>
+
 </Project>
