--- a/src/Sandbox.Loggings/Sandbox.Loggings.csproj
+++ b/src/Sandbox.Loggings/Sandbox.Loggings.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Serilog" Version="2.12.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
+    <PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
   </ItemGroup>
 
 </Project>
