--- a/src/Sandbox.Azure/Sandbox.Azure.csproj
+++ b/src/Sandbox.Azure/Sandbox.Azure.csproj
@@ -9,10 +9,12 @@
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.16.0" />
     <PackageReference Include="Flurl" Version="3.0.7" />
+    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.33.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Sandbox.Core\Sandbox.Core.csproj" />
+    <ProjectReference Include="..\Sandbox.Library.FSharp\Sandbox.Library.FSharp.fsproj" />
   </ItemGroup>
 
 </Project>
