--- a/src/Sandbox.Concepts/Sandbox.Concepts.csproj
+++ b/src/Sandbox.Concepts/Sandbox.Concepts.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BenchmarkDotNet" Version="0.13.5" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Sandbox.Core\Sandbox.Core.csproj" />
   </ItemGroup>
 
