--- a/src/Sandbox.Aws/Sandbox.Aws.csproj
+++ b/src/Sandbox.Aws/Sandbox.Aws.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="AWSSDK.SQS" Version="3.7.102.15" />
     <PackageReference Include="MediatR" Version="12.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="2.1.0" />
     <PackageReference Include="Serilog" Version="2.12.0" />
   </ItemGroup>
 
