docs: Added repository with DynamoDB

--- a/src/Sandbox.Library.FSharp/Sandbox.Library.FSharp.fsproj
+++ b/src/Sandbox.Library.FSharp/Sandbox.Library.FSharp.fsproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Dtos\CustomerDto.fs" />
     <Compile Include="Customer.fs" />
     <Compile Include="Library.fs" />
   </ItemGroup>
