--- a/src/Sandbox.Azure/Sandbox.Azure.csproj
+++ b/src/Sandbox.Azure/Sandbox.Azure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Messaging.EventGrid" Version="4.17.0" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.16.0" />
     <PackageReference Include="Flurl" Version="3.0.7" />
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.33.0" />
