--- a/src/Sandbox.Aws/Sandbox.Aws.csproj
+++ b/src/Sandbox.Aws/Sandbox.Aws.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.103.18" />
     <PackageReference Include="AWSSDK.S3" Version="3.7.105.1" />
+    <PackageReference Include="AWSSDK.SecretsManager" Version="3.7.102.58" />
     <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.7.101.77" />
     <PackageReference Include="AWSSDK.SQS" Version="3.7.102.15" />
     <PackageReference Include="MediatR" Version="12.0.1" />
