--- a/src/Sandbox.Aws.Lambda/Sandbox.Aws.Lambda.csproj
+++ b/src/Sandbox.Aws.Lambda/Sandbox.Aws.Lambda.csproj
@@ -14,7 +14,10 @@
     <PackageReference Include="Amazon.Lambda.Core" Version="2.1.0" />
     <PackageReference Include="Amazon.Lambda.S3Events" Version="3.0.1" />
     <PackageReference Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.3.1" />
-    <PackageReference Include="AWSSDK.S3" Version="3.7.106.1" />
-    <PackageReference Include="SixLabors.ImageSharp" Version="3.0.1" />
+    <PackageReference Include="AWSSDK.S3" Version="3.7.205.9" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.0.2" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Update="SonarAnalyzer.CSharp" Version="9.11.0.78383" />
   </ItemGroup>
 </Project>
