--- a/src/Sandbox.Aws/Sandbox.Aws.csproj
+++ b/src/Sandbox.Aws/Sandbox.Aws.csproj
@@ -8,19 +8,23 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.103.18" />
-    <PackageReference Include="AWSSDK.S3" Version="3.7.105.1" />
-    <PackageReference Include="AWSSDK.SecretsManager" Version="3.7.102.58" />
-    <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.7.101.77" />
-    <PackageReference Include="AWSSDK.SQS" Version="3.7.102.15" />
-    <PackageReference Include="MediatR" Version="12.0.1" />
-    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="2.1.0" />
-    <PackageReference Include="Serilog" Version="2.12.0" />
+    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.203.1" />
+    <PackageReference Include="AWSSDK.S3" Version="3.7.205.9" />
+    <PackageReference Include="AWSSDK.SecretsManager" Version="3.7.201.38" />
+    <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.7.200.53" />
+    <PackageReference Include="AWSSDK.SQS" Version="3.7.200.54" />
+    <PackageReference Include="MediatR" Version="12.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Serilog" Version="3.0.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Sandbox.Core\Sandbox.Core.csproj" />
     <ProjectReference Include="..\Sandbox.Library.FSharp\Sandbox.Library.FSharp.fsproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="SonarAnalyzer.CSharp" Version="9.11.0.78383" />
   </ItemGroup>
 
 </Project>
