--- a/src/Sandbox.Azure.ActiveDirectory/Sandbox.Azure.ActiveDirectory.csproj
+++ b/src/Sandbox.Azure.ActiveDirectory/Sandbox.Azure.ActiveDirectory.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Microsoft.Identity.Web.UI" Version="1.16.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="SonarAnalyzer.CSharp" Version="9.11.0.78383" />
+  </ItemGroup>
+
 </Project>
