--- a/src/Sandbox.Library.FSharp/Sandbox.Library.FSharp.fsproj
+++ b/src/Sandbox.Library.FSharp/Sandbox.Library.FSharp.fsproj
@@ -11,4 +11,8 @@
     <Compile Include="Library.fs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="7.0.400" />
+  </ItemGroup>
+
 </Project>
