--- a/src/Sandbox.Loggings/Sandbox.Loggings.csproj
+++ b/src/Sandbox.Loggings/Sandbox.Loggings.csproj
@@ -8,12 +8,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="RavenDB.Client" Version="5.4.101" />
-    <PackageReference Include="Serilog" Version="2.12.0" />
+    <PackageReference Include="RavenDB.Client" Version="6.0.0" />
+    <PackageReference Include="Serilog" Version="3.0.1" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
     <PackageReference Include="Serilog.Sinks.RavenDB" Version="3.0.0" />
     <PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="SonarAnalyzer.CSharp" Version="9.11.0.78383" />
   </ItemGroup>
 
 </Project>
