--- a/src/Sandbox.Silo/Sandbox.Silo.csproj
+++ b/src/Sandbox.Silo/Sandbox.Silo.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Update="SonarAnalyzer.CSharp" Version="9.11.0.78383" />
+  </ItemGroup>
+
 </Project>
