--- a/src/Sandbox.ConsoleApp/Sandbox.ConsoleApp.csproj
+++ b/src/Sandbox.ConsoleApp/Sandbox.ConsoleApp.csproj
@@ -2,16 +2,21 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Sandbox.Concepts\Sandbox.Concepts.csproj" />
     <ProjectReference Include="..\Sandbox.Core\Sandbox.Core.csproj" />
     <ProjectReference Include="..\Sandbox.Library.FSharp\Sandbox.Library.FSharp.fsproj" />
     <ProjectReference Include="..\Sandbox.Library.VB\Sandbox.Library.VB.vbproj" />
     <ProjectReference Include="..\Sandbox.SQLite\Sandbox.SQLite.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="SonarAnalyzer.CSharp" Version="9.11.0.78383" />
   </ItemGroup>
 
 </Project>
