--- a/src/Sandbox.Concepts/Sandbox.Concepts.csproj
+++ b/src/Sandbox.Concepts/Sandbox.Concepts.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.13.9" />
+    <PackageReference Include="System.Collections.Immutable" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
