--- a/src/Sandbox.WebApi.Loggings/appsettings.Development.json
+++ b/src/Sandbox.WebApi.Loggings/appsettings.Development.json
@@ -1,5 +1,8 @@
 {
   "Serilog": {
+    "Properties": {
+      "Application": "Sample WebApi"
+    },
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
     "MinimumLevel": {
       "Default": "Debug",
@@ -21,6 +24,6 @@
         }
       }
     ],
-    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId", "WithThreadName" ]
   }
 }
