--- a/src/Sandbox.WebApi.Loggings/appsettings.json
+++ b/src/Sandbox.WebApi.Loggings/appsettings.json
@@ -1,5 +1,8 @@
 {
   "Serilog": {
+    "Properties": {
+      "Application": "Sample WebApi"
+    },
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
     "MinimumLevel": {
       "Default": "Information",
@@ -21,7 +24,7 @@
         }
       }
     ],
-    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId", "WithThreadName" ]
   },
   "AllowedHosts": "*"
 }
