--- a/src/Sandbox.Newtonsoft.UnitTests/Sandbox.Newtonsoft.UnitTests.csproj
+++ b/src/Sandbox.Newtonsoft.UnitTests/Sandbox.Newtonsoft.UnitTests.csproj
@@ -26,4 +26,10 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="rawJson.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
