feat: New JToken processing

--- a/src/Sandbox.Newtonsoft.UnitTests/Sandbox.Newtonsoft.UnitTests.csproj
+++ b/src/Sandbox.Newtonsoft.UnitTests/Sandbox.Newtonsoft.UnitTests.csproj
@@ -27,6 +27,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Data\Input.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Data\Output.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="rawJson.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
