--- a/src/Sandbox.Progress/Sandbox.Progress.csproj
+++ b/src/Sandbox.Progress/Sandbox.Progress.csproj
@@ -8,4 +8,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Update="SonarAnalyzer.CSharp" Version="9.32.0.97167" />
+  </ItemGroup>
+
 </Project>
