--- a/src/Sandbox.Azure.Functions.NetFramework/Sandbox.Azure.Functions.NetFramework.csproj
+++ b/src/Sandbox.Azure.Functions.NetFramework/Sandbox.Azure.Functions.NetFramework.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.24" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
