--- a/src/Sandbox.Concepts/Sandbox.Concepts.csproj
+++ b/src/Sandbox.Concepts/Sandbox.Concepts.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.14.0" />
+    <PackageReference Include="MediatR" Version="12.4.1" />
     <PackageReference Include="System.Collections.Immutable" Version="8.0.0" />
   </ItemGroup>
 
