--- a/src/Sandbox.ConsoleApp/Sandbox.ConsoleApp.csproj
+++ b/src/Sandbox.ConsoleApp/Sandbox.ConsoleApp.csproj
@@ -8,7 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.4.1" />
     <PackageReference Include="sandbox.nuget.netcorew" Version="1.0.0" />
+    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.119" />
   </ItemGroup>
 
   <ItemGroup>
