--- a/src/Sandbox.Images/Sandbox.Images.csproj
+++ b/src/Sandbox.Images/Sandbox.Images.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="IronOcr" Version="2025.1.2" />
     <PackageReference Include="OpenCvSharp4" Version="4.10.0.20241108" />
     <PackageReference Include="OpenCvSharp4.runtime.win" Version="4.10.0.20241108" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.6" />
