--- a/src/Sandbox.WeatherApi/Properties/launchSettings.json
+++ b/src/Sandbox.WeatherApi/Properties/launchSettings.json
@@ -16,8 +16,10 @@
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7077;http://localhost:5063",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "SHAUN": "EnvV"
+      },
+      //"commandLineArgs": "--SHAUN=\"CLI\""
     },
     "IIS Express": {
       "commandName": "IISExpress",
