--- a/src/Sandbox.Experiment/Sandbox.Experiment.csproj
+++ b/src/Sandbox.Experiment/Sandbox.Experiment.csproj
@@ -9,6 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="Bogus" Version="35.6.1" />
+    <PackageReference Include="Microsoft.KernelMemory" Version="0.98.250324.1" />
+    <PackageReference Include="Microsoft.KernelMemory.WebClient" Version="0.98.250324.1" />
     <PackageReference Include="System.IO.Hashing" Version="9.0.0" />
   </ItemGroup>
 
