feat: Add targeting feature toggle

--- a/demo/FeatureFlag/WeatherApi/appsettings.Development.json
+++ b/demo/FeatureFlag/WeatherApi/appsettings.Development.json
@@ -6,6 +6,32 @@
     }
   },
   "FeatureManagement": {
-    "EnableExperimentalFeature": true
+    "EnableExperimentalFeature": true,
+    "EnableSecretFeature": {
+      "EnabledFor": [
+        {
+          "Name": "Microsoft.Targeting",
+          "Parameters": {
+            "Audience": {
+              "Users": [ "shaun", "james" ],
+              "Groups": [
+                {
+                  "Name": "alpha-testers",
+                  "RolloutPercentage": 100
+                },
+                {
+                  "Name": "beta-testers",
+                  "RolloutPercentage": 50
+                }
+              ],
+              "DefaultRolloutPercentage": 0,
+              "Exclusion": {
+                "Users": ["adam"]
+              }
+            }
+          }
+        }
+      ]
+    }
   }
 }
