--- a/demo/FeatureFlag/WeatherApi/WeatherApi.csproj
+++ b/demo/FeatureFlag/WeatherApi/WeatherApi.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
     <PackageReference Include="Microsoft.FeatureManagement" Version="4.1.0" />
     <PackageReference Include="Microsoft.FeatureManagement.AspNetCore" Version="4.1.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.2" />
   </ItemGroup>
 
 </Project>
