docs: Added configure await conundrum

--- a/src/Sandbox.ConsoleApp/Sandbox.ConsoleApp.csproj
+++ b/src/Sandbox.ConsoleApp/Sandbox.ConsoleApp.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Sandbox.Concepts\Sandbox.Concepts.csproj" />
+    <ProjectReference Include="..\Sandbox.Silo\Sandbox.Silo.csproj" />
     <ProjectReference Include="..\Sandbox.SQLite\Sandbox.SQLite.csproj" />
   </ItemGroup>
 
