--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,3 +47,9 @@ stages:
       stageName: BuildWebSocket
       solution: demo/WebSocket/WebSocket.sln
       displayName: Build Web Socket Projects
+
+  - template: ci/build-demo.yml
+    parameters:
+      stageName: BuildIpForwarding
+      solution: demo/IpForwarding/IpForwarding.sln
+      displayName: Build IP Forwarding Projects
