ci: Build cors slnx project

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,3 +53,9 @@ stages:
       stageName: BuildIpForwarding
       solution: demo/IpForwarding/IpForwarding.sln
       displayName: Build IP Forwarding Projects
+
+  - template: ci/build-demo-slnx.yml
+    parameters:
+      stageName: BuildCors
+      solution: demo/Cors/Cors.slnx
+      displayName: Build Cors Projects
