--- a/demo/Benchmarks/Net48Net10/Net48Net10.csproj
+++ b/demo/Benchmarks/Net48Net10/Net48Net10.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFrameworks>net48;net10.0</TargetFrameworks>
     <RootNamespace>Benchmarks.$(MSBuildProjectName)</RootNamespace>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)' != 'net48'">
